; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_texcoord.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_texcoord.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vec2 = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"gs_texcoord\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gs_texcoord(float %0, float %1, i32 %2) #0 {
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.vec2, align 4
  store float %0, float* %4, align 4
  store float %1, float* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = call i32 @gs_valid(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %3
  br label %17

11:                                               ; preds = %3
  %12 = load float, float* %4, align 4
  %13 = load float, float* %5, align 4
  %14 = call i32 @vec2_set(%struct.vec2* %7, float %12, float %13)
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @gs_texcoord2v(%struct.vec2* %7, i32 %15)
  br label %17

17:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @gs_valid(i8*) #1

declare dso_local i32 @vec2_set(%struct.vec2*, float, float) #1

declare dso_local i32 @gs_texcoord2v(%struct.vec2*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
